--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,8 @@
 				"DavidAnson.vscode-markdownlint",
 				"ms-azuretools.vscode-docker",
 				"streetsidesoftware.code-spell-checker",
-				"ms-dotnettools.csdevkit"
+				"ms-dotnettools.csdevkit",
+				"vscjava.vscode-java-pack"
 			]
 		}
 	}
