--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,8 @@
 				"ms-azuretools.vscode-docker",
 				"streetsidesoftware.code-spell-checker",
 				"ms-dotnettools.csdevkit",
-				"vscjava.vscode-java-pack"
+				"vscjava.vscode-java-pack",
+				"msjsdiag.vscode-react-native"
 			]
 		}
 	}
