--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,7 +18,7 @@
 				"streetsidesoftware.code-spell-checker",
 				"ms-dotnettools.csdevkit",
 				"vscjava.vscode-java-pack",
-				"msjsdiag.vscode-react-native"
+				"dbaeumer.vscode-eslint"
 			]
 		}
 	}
