--- a/javascript/.devcontainer/devcontainer.json
+++ b/javascript/.devcontainer/devcontainer.json
@@ -16,7 +16,7 @@
 				"DavidAnson.vscode-markdownlint",
 				"ms-azuretools.vscode-docker",
 				"streetsidesoftware.code-spell-checker",
-				"msjsdiag.vscode-react-native"
+				"dbaeumer.vscode-eslint"
 			]
 		}
 	}
