add kotlin to outer container

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,7 +18,8 @@
 				"streetsidesoftware.code-spell-checker",
 				"ms-dotnettools.csdevkit",
 				"vscjava.vscode-java-pack",
-				"dbaeumer.vscode-eslint"
+				"dbaeumer.vscode-eslint",
+				"mathiasfrohlich.Kotlin"
 			]
 		}
 	}
