add pascal to outer container

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,9 @@
 				"ms-dotnettools.csdevkit",
 				"vscjava.vscode-java-pack",
 				"dbaeumer.vscode-eslint",
-				"mathiasfrohlich.Kotlin"
+				"mathiasfrohlich.Kotlin",
+				"coolchyni.fpctoolkit",
+				"coolchyni.beyond-debug"
 			]
 		}
 	}
