--- a/perl/.devcontainer/Dockerfile
+++ b/perl/.devcontainer/Dockerfile
@@ -22,6 +22,20 @@ RUN groupadd --gid $USER_GID $USERNAME \
     && chmod 0440 /etc/sudoers.d/$USERNAME \
     && usermod -s $USER_SHELL $USERNAME
 
+ARG ZONE_INFO=America/New_York
+ENV LANG=en_US.UTF-8
+
+# timezone info
+RUN ln -fs /usr/share/zoneinfo/$ZONE_INFO /etc/localtime
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y tzdata
+RUN dpkg-reconfigure --frontend noninteractive tzdata
+
+# locale info
+RUN apt-get install -y locales && \
+    sed -i -e "s/# $LANG.*/$LANG UTF-8/" /etc/locale.gen && \
+    dpkg-reconfigure --frontend=noninteractive locales && \
+    update-locale LANG=$LANG
+
 # Perl
 RUN apt-get install -y perl
 
