add perl to outer container

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -26,7 +26,7 @@ RUN groupadd --gid $USER_GID $USERNAME \
 
 ARG ZONE_INFO=America/New_York
 ENV LANG=en_US.UTF-8
-    
+
 # timezone info
 RUN ln -fs /usr/share/zoneinfo/$ZONE_INFO /etc/localtime
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y tzdata
@@ -57,8 +57,11 @@ USER root
 RUN wget -O sdk.install.sh "https://get.sdkman.io"
 RUN chmod +x sdk.install.sh
 
-# Pascal 
+# Pascal
 RUN apt-get install -y fpc
+
+# Perl
+RUN apt-get install -y perl
 
 # switch to user $USERNAME
 SHELL ["/bin/bash", "-c"]
