--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,11 @@
 	"customizations": {
 		"vscode": {
 			"settings" : {"editor.rulers": [72, 79],
-			"editor.trimAutoWhitespace": true
+			"editor.trimAutoWhitespace": true,
+			"[python]": {
+				"editor.defaultFormatter": "ms-python.black-formatter",
+				"editor.formatOnSave": true
+			}
 		},
 			"extensions": [
 				"DavidAnson.vscode-markdownlint",
@@ -22,7 +26,9 @@
 				"mathiasfrohlich.Kotlin",
 				"coolchyni.fpctoolkit",
 				"coolchyni.beyond-debug",
-				"richterger.perl"
+				"richterger.perl",
+				"ms-python.black-formatter",
+				"ms-python.python"
 			]
 		}
 	}
