--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -44,8 +44,7 @@ RUN apt-get install -y dotnet-sdk-8.0
 # Java 21
 RUN apt-get install -y openjdk-21-jdk
 
-# JavaScript (Node.js via nvm; React)
-EXPOSE 3000
+# JavaScript and TypeScript (Node.js via nvm)
 SHELL ["/bin/bash", "-c"]
 USER $USERNAME
 RUN wget -qO- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
