change perl extensions in outer devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,7 +27,7 @@
 				"mathiasfrohlich.Kotlin",
 				"coolchyni.fpctoolkit",
 				"coolchyni.beyond-debug",
-				"richterger.perl",
+				bscan.perlnavigator,
 				"ms-python.black-formatter",
 				"ms-python.python",
 				"Shopify.ruby-extensions-pack",
