add spelling words related to devcontainers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "cSpell.words": [
-        "prognb"
+        "prognb",
+        "devcontainers",
+        "codenames",
+        "libc",
+        "slimify"
     ]
 }
